feat: LC-61 add get all categories endpoint
