# apps/api/src/swagger/api-schema.json
@@ -247,6 +247,23 @@
         }
       }
     },
+    "/categories": {
+      "get": {
+        "operationId": "CategorieController_getAllCategories",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetAllCategoriesResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/test-config/setup": {
       "post": {
         "operationId": "TestConfigController_setup",
@@ -293,10 +310,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "email",
-          "password"
-        ]
+        "required": ["email", "password"]
       },
       "RegisterResponse": {
         "type": "object",
@@ -333,18 +347,10 @@
                 ]
               }
             },
-            "required": [
-              "id",
-              "createdAt",
-              "updatedAt",
-              "email",
-              "role"
-            ]
+            "required": ["id", "createdAt", "updatedAt", "email", "role"]
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "LoginBody": {
         "type": "object",
@@ -359,10 +365,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "email",
-          "password"
-        ]
+        "required": ["email", "password"]
       },
       "LoginResponse": {
         "type": "object",
@@ -399,18 +402,10 @@
                 ]
               }
             },
-            "required": [
-              "id",
-              "createdAt",
-              "updatedAt",
-              "email",
-              "role"
-            ]
+            "required": ["id", "createdAt", "updatedAt", "email", "role"]
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "LogoutResponse": {
         "type": "null"
@@ -453,18 +448,10 @@
                 ]
               }
             },
-            "required": [
-              "id",
-              "createdAt",
-              "updatedAt",
-              "email",
-              "role"
-            ]
+            "required": ["id", "createdAt", "updatedAt", "email", "role"]
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "GetUsersResponse": {
         "type": "object",
@@ -503,19 +490,11 @@
                   ]
                 }
               },
-              "required": [
-                "id",
-                "createdAt",
-                "updatedAt",
-                "email",
-                "role"
-              ]
+              "required": ["id", "createdAt", "updatedAt", "email", "role"]
             }
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "GetUserByIdResponse": {
         "type": "object",
@@ -552,18 +531,10 @@
                 ]
               }
             },
-            "required": [
-              "id",
-              "createdAt",
-              "updatedAt",
-              "email",
-              "role"
-            ]
+            "required": ["id", "createdAt", "updatedAt", "email", "role"]
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "UpdateUserBody": {
         "type": "object",
@@ -609,18 +580,10 @@
                 ]
               }
             },
-            "required": [
-              "id",
-              "createdAt",
-              "updatedAt",
-              "email",
-              "role"
-            ]
+            "required": ["id", "createdAt", "updatedAt", "email", "role"]
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "ChangePasswordBody": {
         "type": "object",
@@ -636,16 +599,57 @@
             "type": "string"
           }
         },
-        "required": [
-          "newPassword",
-          "oldPassword"
-        ]
+        "required": ["newPassword", "oldPassword"]
       },
       "ChangePasswordResponse": {
         "type": "null"
       },
       "DeleteUserResponse": {
         "type": "null"
+      },
+      "GetAllCategoriesResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string"
+                },
+                "title": {
+                  "type": "string",
+                  "maxLength": 100
+                },
+                "createdAt": {
+                  "type": "string"
+                },
+                "updatedAt": {
+                  "type": "string"
+                },
+                "archivedAt": {
+                  "anyOf": [
+                    {
+                      "type": "string"
+                    },
+                    {
+                      "type": "null"
+                    }
+                  ]
+                }
+              },
+              "required": [
+                "id",
+                "title",
+                "createdAt",
+                "updatedAt",
+                "archivedAt"
+              ]
+            }
+          }
+        },
+        "required": ["data"]
       }
     }
   }
